--- a/go/two-neon-boxes.html
+++ b/go/two-neon-boxes.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/sausage-flip.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/sausage-flip.png">
+                            <img src="https://sudoku-online.github.io/img/sausage-flip.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/g-switch-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/g-switch-3.png">
+                            <img src="https://sudoku-online.github.io/img/g-switch-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiny-fishing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiny-fishing.png">
+                            <img src="https://sudoku-online.github.io/img/tiny-fishing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/murder.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/murder.png">
+                            <img src="https://sudoku-online.github.io/img/murder.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/duck-life-3-evolution.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
+                            <img src="https://sudoku-online.github.io/img/duck-life-3-evolution.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/monster-tracks.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/monster-tracks.png">
+                            <img src="https://sudoku-online.github.io/img/monster-tracks.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-winter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-winter.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-winter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/funny-shooter-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/funny-shooter-2.png">
+                            <img src="https://sudoku-online.github.io/img/funny-shooter-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
